# cd-ripper

./: README.md  install.sh  pyproject.toml
cd-ripper/: README.md  bar.txt  foo.txt  install.sh
cd-ripper/cd_ripper/: __init__.py  raw.py
sandisk/: README.md  pyproject.toml
