[tool.poetry]
name = "cd-ripper"
version = "0.1.0"
description = "CLI tool for ripping music off of cds and adding music tags."
authors = ["Connor Novak <connorrnovak@gmail.com>"]
readme = "README.md"
packages = [{include = "cd_ripper"}]

[tool.poetry.dependencies]
python = ">=3.7"
tqdm = "^4.65.0"
plac = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
